C2 compilation fails with assert(node->_last_del == _last) failed: must have deleted the edge just produced

XMLWordPrintable

    • b21
    • 18
    • b27

      java -XX:-TieredCompilation -XX:+StressLCM -XX:+StressGCM -XX:+StressIGVN -XX:+StressCCP -Xcomp -XX:CompileOnly=Test -XX:CompileCommand=quiet Test.java

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/workspace/open/src/hotspot/share/opto/node.cpp:129), pid=38742, tid=38756
      # assert(node->_last_del == _last) failed: must have deleted the edge just produced

      Current CompileTask:
      C2: 1648 152 b Test::vMeth (299 bytes)

      Stack: [0x00007f0285334000,0x00007f0285435000], sp=0x00007f028542eeb0, free space=1003k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x16d434e] DUIterator::verify_resync()+0x4e
      V [libjvm.so+0x14af8c1] PhaseIdealLoop::replace_parallel_iv(IdealLoopTree*)+0x5f1
      V [libjvm.so+0x14b6df8] IdealLoopTree::counted_loop(PhaseIdealLoop*)+0x108
      V [libjvm.so+0x14b6e13] IdealLoopTree::counted_loop(PhaseIdealLoop*)+0x123
      V [libjvm.so+0x14bc8ba] PhaseIdealLoop::build_and_optimize()+0xa0a
      V [libjvm.so+0xb12a8a] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x27a
      V [libjvm.so+0xb0f217] Compile::Optimize()+0x1027
      V [libjvm.so+0xb11440] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x15c0
      V [libjvm.so+0x9215c3] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x683
      V [libjvm.so+0xb201b8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xbb8
      V [libjvm.so+0xb21178] CompileBroker::compiler_thread_loop()+0x6c8
      V [libjvm.so+0x106d7e8] JavaThread::thread_main_inner()+0x238
      V [libjvm.so+0x1a8c5e0] Thread::call_run()+0x100
      V [libjvm.so+0x174f474] thread_native_entry(Thread*)+0x104

      Does not reproduce with latest JDK 17u.

        1. Test-2.java
          0.6 kB
        2. Test-1.java
          0.7 kB
        3. hs_err_pid40764.log
          74 kB
        4. replay_pid40764.log
          219 kB
        5. FuzzerUtils.java
          13 kB
        6. Test.java
          9 kB

            Assignee:
            Yi Yang
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: