8290432: C2 compilation fails with assert(node->_last_del == _last) failed: must have deleted the edge just produced